--- a/posttest/src/main/resources/application.properties
+++ b/posttest/src/main/resources/application.properties
@@ -1,6 +1,25 @@
-server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/<YOUR_DATABASE_NAME>
-spring.datasource.username=<YOUR_USERNAME>
-spring.datasource.password=<YOUR_PASSWORD>
-spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
+spring.datasource.url=jdbc:postgresql://localhost:5432/PostTestDB
+spring.datasource.jdbc-url=${spring.datasource.url}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.platform=postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+#spring.security.user.name=admin
+#spring.security.user.password=password
+
+# JPA & Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Postgresql case-sensitive
+#spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+server.port=8888
+
+
